[project]
name = "faa-nasr-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Strzelewicz",email = "pawel.strzelewicz83@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "faa_nasr_tools", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
